<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".matrixCalculatorActivity">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <GridLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:columnCount="5"
                android:rowCount="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/matrA"
                    android:textStyle="bold"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/md_black_1000"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:focusable="true"
                    android:focusableInTouchMode="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/rows"
                    android:id="@+id/textView"
                    android:textColor="@color/md_black_1000"
                    android:layout_alignParentTop="true"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_columnSpan="1"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="2"
                    android:id="@+id/editRowsA"
                    android:text="3"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:gravity="right"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/cols"
                    android:textColor="@color/md_black_1000"
                    android:layout_marginLeft="15dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:layout_columnSpan="1"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="2"
                    android:id="@+id/editColsA"
                    android:text="3"
                    android:layout_row="1"
                    android:layout_column="3"
                    android:gravity="right"
                    android:layout_columnSpan="1"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set"
                    android:id="@+id/buttonA"
                    android:background="@drawable/cicle_bg"
                    android:layout_row="1"
                    android:layout_column="4"
                    android:layout_columnSpan="1"
                    android:layout_gravity="right"/>

            </GridLayout>

            <GridLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:columnCount="3"
                android:rowCount="3"
                android:id="@+id/matrixA">

            </GridLayout>

            <GridLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:columnCount="5"
                android:rowCount="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/matrB"
                    android:textStyle="bold"
                    android:textColor="@color/md_black_1000"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_row="0"
                    android:layout_column="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/rows"
                    android:textColor="@color/md_black_1000"
                    android:layout_alignParentTop="true"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_columnSpan="1"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="2"
                    android:id="@+id/editRowsB"
                    android:text="3"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:gravity="right"
                    android:layout_columnSpan="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/cols"
                    android:textColor="@color/md_black_1000"
                    android:layout_marginLeft="15dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:layout_columnSpan="1"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="2"
                    android:id="@+id/editColsB"
                    android:text="3"
                    android:layout_row="1"
                    android:layout_column="3"
                    android:gravity="right"
                    android:layout_columnSpan="1"/>

                <Button
                    android:id="@+id/buttonB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="4"
                    android:background="@drawable/cicle_bg"
                    android:layout_columnSpan="1"
                    android:layout_gravity="right"
                    android:text="@string/set"
                    android:theme="@style/MyButton" />

            </GridLayout>

            <GridLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:columnCount="3"
                android:rowCount="3"
                android:id="@+id/matrixB">

            </GridLayout>
            <HorizontalScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <GridLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:rowCount="1">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add"
                        android:background="@drawable/cicle_bg"
                        android:id="@+id/add"
                        />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/cicle_bg"
                        android:text="@string/subtract"
                        android:id="@+id/sub"
                        />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/cicle_bg"
                        android:text="@string/subtract2"
                        android:id="@+id/sub2"
                        />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/cicle_bg"
                        android:text="@string/multiply"
                        android:id="@+id/mul"
                        />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/cicle_bg"
                        android:text="@string/multiply2"
                        android:id="@+id/mul2"
                        />
                </GridLayout>
            </HorizontalScrollView>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:rowCount="1"
                android:columnCount="2">

                <ToggleButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New ToggleButton"
                    android:id="@+id/toggleButton"
                    android:background="@drawable/del"
                    android:textColor="@color/md_white_1000"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textOff="A"
                    android:textOn="B"
                    android:checked="false"
                    />

                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/horizontalScrollView" >

                    <GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/cicle_bg"
                            android:text="@string/trans"
                            android:id="@+id/transpose" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/cicle_bg"
                            android:text="@string/inv"
                            android:id="@+id/inverse" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/cicle_bg"
                            android:text="@string/scalar"
                            android:id="@+id/scalar" />



                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="numberSigned"
                            android:ems="10"
                            android:id="@+id/scaleNum" />
                    </GridLayout>
                </HorizontalScrollView>
            </GridLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:rowCount="2">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cicle_bg"
                    android:text="@string/det"
                    android:id="@+id/determinant" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rank"
                    android:background="@drawable/cicle_bg"
                    android:id="@+id/rank" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/swap1"
                    android:id="@+id/swap1"
                    android:background="@drawable/cicle_bg"
                    android:layout_column="0"
                    android:layout_row="1"
                    android:layout_columnSpan="1"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/swap2"
                    android:background="@drawable/cicle_bg"
                    android:id="@+id/swap2"
                    android:layout_column="1"
                    android:layout_row="1"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/swap3"
                    android:id="@+id/swap3"
                    android:background="@drawable/cicle_bg"
                    android:layout_column="2"
                    android:layout_row="1"/>


            </GridLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/result"
                android:textStyle="bold"
                android:textColor="@color/md_black_1000"
                android:id="@+id/textView2" />

            <GridLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:columnCount="3"
                android:rowCount="3"
                android:id="@+id/matrixC">

            </GridLayout>
        </LinearLayout>

</LinearLayout>